--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,16 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "fetch-mock": "^9.10.1",
     "jest": "^26.0.1"
   },
   "dependencies": {
-    "eslint-plugin-jest": "^23.13.2"
+    "debug": "^4.1.1",
+    "eslint-plugin-jest": "^23.13.2",
+    "marked": "^1.1.0",
+    "node-fetch": "^2.6.0"
+  },
+  "bin": {
+    "mdlinks": "./src/cli.js"
   }
 }
