--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^26.0.1"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "debug": "^4.1.1",
     "eslint-plugin-jest": "^23.13.2",
     "marked": "^1.1.0",
