--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "cli-color": "^2.0.0",
     "debug": "^4.1.1",
     "eslint-plugin-jest": "^23.13.2",
+    "figlet": "^1.4.0",
     "marked": "^1.1.0",
     "node-fetch": "^2.6.0"
   },
