--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "jest": "^26.0.1"
   },
   "dependencies": {
+    "caporal": "^1.4.0",
     "chalk": "^4.1.0",
     "cli-color": "^2.0.0",
+    "commander": "^5.1.0",
     "debug": "^4.1.1",
     "eslint-plugin-jest": "^23.13.2",
     "figlet": "^1.4.0",
