--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lim012-fe-md-links",
   "version": "1.0.0",
   "description": "\"creacion de libreria mdLinks\"",
-  "main": "index.js",
+  "main": "src/mdLinks.js",
   "directories": {
     "test": "test"
   },
